# compynators

./: README.md  pyproject.toml
compynators/: __init__.py  bools.py  combinators.py  compynators.py  span.py  stream.py  union.py
